--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://cristeandrei.github.io"
+baseURL: "https://cristeandrei.github.io/blog"
 title: Blog
 paginate: 5
 theme: PaperMod
